Added crud methods to projects service

--- a/libs/ui-toolbar/src/lib/toolbar/toolbar.component.html
+++ b/libs/ui-toolbar/src/lib/toolbar/toolbar.component.html
@@ -3,6 +3,6 @@
     <span class="align-self-center ml-3">{{title | uppercase}}</span>
   </div>
   <button mat-mini-fab>
-    <mat-icon>star</mat-icon>
+    <mat-icon>person</mat-icon>
   </button>
 </mat-toolbar>
